Fixed header <a> overflow in mobile menu

--- a/less/header.less
+++ b/less/header.less
@@ -57,7 +57,7 @@
 
     #mobileButton {
       -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-      
+
       border: 1px solid transparent;
       background-color: transparent;
       padding: 0;
@@ -111,6 +111,7 @@
 
         a {
           color: white;
+          display: none;
         }
       }
       .menuItems:first-child {
@@ -166,7 +167,7 @@
         transform: rotate(180deg);
 
         .menuItems {
-          visibility: visible;
+          // visibility: visible;
           opacity: 1;
           border-top: none;
           height: auto;
@@ -259,6 +260,10 @@ html.expanded {
       visibility: visible;
       transition: opacity 0.4s ease-out 0.4s;
       opacity: 1;
+
+      a {
+        display: inline-block;
+      }
     }
   }
 
